--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,5 @@
         "ApiKey": "SENDGRID_APIKEY",
         "EmailTo": "TO_EMAIL_ADDRESS"
     },
-    "ExpectedDelta": 0
+    "ExpectedDelta": "0.00000040"
 }
