--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,6 @@
         "ApiKey": "SENDGRID_APIKEY",
         "EmailTo": "TO_EMAIL_ADDRESS"
     },
-    "ExpectedDelta": "0.00000040"
+    "ExpectedDelta": "0.00000040",
+    "ResumeAfterDelta": 5
 }
