--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,13 @@
         "EmailTo": "TO_EMAIL_ADDRESS"
     },
     "ExpectedDelta": "0.00000040",
-    "ResumeAfterDelta": 5
+    "ResumeAfterDelta": 5,
+    "SellAccount": {
+        "BitcoinTransferFee": 0.0005,
+        "TradingFee": 0.1
+    },
+    "BuyAccount": {
+        "BitcoinTransferFee": 0.0005,
+        "TradingFee": 0.25
+    }
 }
