--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,7 @@
     },
     "ExpectedDelta": "0.00000040",
     "ResumeAfterDelta": 5,
+    "BitcoinTradingAmount": 0.5,
     "SellAccount": {
         "BitcoinTransferFee": 0.0005,
         "TradingFee": 0.1
