--- a/src/tradebot.csproj
+++ b/src/tradebot.csproj
@@ -14,5 +14,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bittrex.Net\Bittrex.Net.csproj" />
+    <ProjectReference Include="..\Binance.Net\Binance.Net.csproj" />
   </ItemGroup>
 </Project>
