Add test console

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -13,5 +13,14 @@
     "BuyAccount": {
         "BitcoinTransferFee": 0.0005,
         "TradingFee": 0.25
+    },
+    "IsAutoTrading": true,
+    "Bittrex": {
+        "API_KEY": "hello",
+        "API_SECRET": "there"
+    },
+    "Binance": {
+        "API_KEY": "hello",
+        "API_SECRET": "there"
     }
 }
