--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,11 +6,11 @@
     "ExpectedDelta": "0.00000040",
     "ResumeAfterDelta": 5,
     "BitcoinTradingAmount": 0.5,
-    "SellAccount": {
+    "BinanceAccount": {
         "BitcoinTransferFee": 0.0005,
         "TradingFee": 0.1
     },
-    "BuyAccount": {
+    "BittrexAccount": {
         "BitcoinTransferFee": 0.0005,
         "TradingFee": 0.25
     },
@@ -22,5 +22,6 @@
     "Binance": {
         "API_KEY": "hello",
         "API_SECRET": "there"
-    }
+    },
+    "TradeFlow": "SellAtBinanceBuyAtBittrex"
 }
