Restructure the app

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-src/bin/
-src/obj/
-src/.vscode/
-src/appsettings.dev.json
-tests/bin/
-tests/obj/
-tests/.vscode/
-tests/appsettings.dev.json
-Binance.Net/bin/
-Binance.Net/obj/
-Bittrex.Net/bin/
-Bittrex.Net/obj/
-testconsole/bin
-testconsole/obj
+tradebot.console/bin/
+tradebot.console/obj/
+tradebot.console/.vscode/
+tradebot.console/appsettings.dev.json
+tradebot.tests/bin/
+tradebot.tests/obj/
+tradebot.tests/.vscode/
+tradebot.tests/appsettings.dev.json
+tradebot.testconsole/bin
+tradebot.testconsole/obj
 tradebot.core/bin
 tradebot.core/obj
 tradebot.api/core
 tradebot.api/obj
+Binance.Net/bin/
+Binance.Net/obj/
+Bittrex.Net/bin/
+Bittrex.Net/obj/
