--- a/tradebot.core/.vscode/launch.json
+++ b/tradebot.core/.vscode/launch.json
@@ -5,12 +5,12 @@
    "version": "0.2.0",
    "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "tradebot.core (console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/tests.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/tradebot.core.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
@@ -19,7 +19,7 @@
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
-            "name": ".NET Core Attach",
+            "name": "tradebot.core (attach)",
             "type": "coreclr",
             "request": "attach",
             "processId": "${command:pickProcess}"
