--- a/tradebot.api/tradebot.api.csproj
+++ b/tradebot.api/tradebot.api.csproj
@@ -16,4 +16,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\tradebot.core\tradebot.core.csproj" />
+  </ItemGroup>
+
 </Project>
