--- a/tradebot.core/.vscode/tasks.json
+++ b/tradebot.core/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/tests.csproj"
+                "${workspaceFolder}/tradebot.core.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
