Refactor the code

--- a/tradebot.console/appsettings.json
+++ b/tradebot.console/appsettings.json
@@ -23,5 +23,6 @@
         "API_KEY": "hello",
         "API_SECRET": "there"
     },
-    "TradeFlow": "SellAtBinanceBuyAtBittrex"
+    "TradeFlow": "SellAtBinanceBuyAtBittrex",
+    "Coin": "ADA"
 }
