--- a/tradebot.console/appsettings.json
+++ b/tradebot.console/appsettings.json
@@ -1,28 +1,24 @@
 {
     "Email": {
-        "ApiKey": "SENDGRID_APIKEY",
-        "EmailTo": "TO_EMAIL_ADDRESS"
+        "ApiKey": "key",
+        "EmailTo": "email"
     },
-    "ExpectedDelta": "0.00000040",
+    "ExpectedDelta": "0.00000000",
     "ResumeAfterDelta": 5,
     "BitcoinTradingAmount": 0.5,
     "BinanceAccount": {
         "BitcoinTransferFee": 0.0005,
-        "TradingFee": 0.1
+        "TradingFee": 0.1,
+        "API_KEY": "apikey",
+        "API_SECRET": "apisecret"
     },
     "BittrexAccount": {
         "BitcoinTransferFee": 0.0005,
-        "TradingFee": 0.25
+        "TradingFee": 0.25,
+        "API_KEY": "apikey",
+        "API_SECRET": "apisecret"
     },
-    "IsAutoTrading": true,
-    "Bittrex": {
-        "API_KEY": "hello",
-        "API_SECRET": "there"
-    },
-    "Binance": {
-        "API_KEY": "hello",
-        "API_SECRET": "there"
-    },
+    "IsAutoTrading": false,
     "TradeFlow": "SellAtBinanceBuyAtBittrex",
     "Coin": "ADA"
 }
