--- a/tradebot.console/.vscode/launch.json
+++ b/tradebot.console/.vscode/launch.json
@@ -13,11 +13,11 @@
             "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/tradebot.dll",
             "args": [
                 "-c", "ADA",
-                "-d", "0.00000010M",
+                "-d", "0.00000010",
                 "-auto", 
-                "-f", "SellAtBinanceBuyAtBittrex",
-                "-q", "50.00000000M",
-                "-w", "0.00000000M"
+                "-f", "AutoSwitch",
+                "-q", "50",
+                "-w", "0.00000000"
             ],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
