Fix email issue

--- a/tradebot.console/appsettings.json
+++ b/tradebot.console/appsettings.json
@@ -1,7 +1,10 @@
 {
     "Email": {
         "ApiKey": "key",
-        "EmailTo": "email"
+        "EmailTo": "email",
+        "ToName": "name",
+        "EmailFrom": "email",
+        "FromName": "name"
     },
     "ExpectedDelta": "0.00000000",
     "ResumeAfterDelta": 5,
@@ -9,16 +12,20 @@
     "BinanceAccount": {
         "BitcoinTransferFee": 0.0005,
         "TradingFee": 0.1,
-        "API_KEY": "apikey",
-        "API_SECRET": "apisecret"
+        "API_KEY": "KEY",
+        "API_SECRET": "SECRET"
     },
     "BittrexAccount": {
         "BitcoinTransferFee": 0.0005,
         "TradingFee": 0.25,
-        "API_KEY": "apikey",
-        "API_SECRET": "apisecret"
+        "API_KEY": "KEY",
+        "API_SECRET": "SECRET"
     },
-    "IsAutoTrading": false,
+    "IsAutoTrading": true,
     "TradeFlow": "SellAtBinanceBuyAtBittrex",
-    "Coin": "ADA"
+    "Coin": "ADA",
+    "TradeMode": "FixedMode",
+    "PlusPointToWin": "0.00000003",
+    "TestMode": true,
+    "FixQuantity": 400
 }
