--- a/tradebot.console/.vscode/launch.json
+++ b/tradebot.console/.vscode/launch.json
@@ -12,12 +12,12 @@
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/bin/Debug/netcoreapp2.0/tradebot.dll",
             "args": [
-                "-c", "ADA",
-                "-d", "0.00000010",
+                "-c", "XLM",
+                "-d", "0.00000000",
                 "-auto", 
                 "-f", "AutoSwitch",
                 "-q", "50",
-                "-w", "0.00000000"
+                "-w", "0.00000001"
             ],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
