--- a/tradebot.console/tradebot.csproj
+++ b/tradebot.console/tradebot.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="hangfire.core" Version="1.6.17" />
+    <PackageReference Include="hangfire.sqlserver" Version="1.6.17" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0" />
