Adding HostedService for TradeBot API so that host the bot as a service in WebHost later

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ tradebot.testconsole/bin
 tradebot.testconsole/obj
 tradebot.core/bin
 tradebot.core/obj
-tradebot.api/core
+tradebot.api/bin
 tradebot.api/obj
 Binance.Net/bin/
 Binance.Net/obj/
