--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Binance.Net/bin/
 Binance.Net/obj/
 Bittrex.Net/bin/
 Bittrex.Net/obj/
+tradebot.api/bin/
+tradebot.api/obj/
+tradebot.api/botsettings.dev.json
