--- a/tradebot.core/tradebot.core.csproj
+++ b/tradebot.core/tradebot.core.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="hangfire.core" Version="1.6.17" />
+    <PackageReference Include="hangfire.sqlserver" Version="1.6.17" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
