--- a/tradebot.api/tradebot.api.csproj
+++ b/tradebot.api/tradebot.api.csproj
@@ -1,21 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
   <ItemGroup>
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="2.1.2" />
+    <PackageReference Include="DotNetCore.CAP.SqlServer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\tradebot.core\tradebot.core.csproj" />
   </ItemGroup>
