Try with POSTGRES

--- a/tradebot.api/appsettings.Development.json
+++ b/tradebot.api/appsettings.Development.json
@@ -13,6 +13,6 @@
       "UserName": "guest",
       "Password": "guest"
     },
-    "DatabaseConnectionString": "Server=localhost;Database=eventbus;User Id=sa;Password=NashTech@123;MultipleActiveResultSets=True;"
+    "DatabaseConnectionString": "Server=localhost;Database=EventBus;UserId=postgres;Password=NashTech@123;"
   }
 }
